crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_case_later_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue number =\n    case number of\n        0 -> 1\n        \"hello\" -> 2\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:5:9]
 4 │         0 -> 1
 5 │         "hello" -> 2
   ·         ───┬───
   ·            ╰── case pattern 2
   ╰────
