crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_ctor_arg_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\ntype Option = Some Primitive.int\nvalue (Some \"hello\") = 1\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:3:13]
 2 │ type Option = Some Primitive.int
 3 │ value (Some "hello") = 1
   ·             ───┬───
   ·                ╰── argument 1 of `Some`
   ╰────
