crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_list_tail.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue (first :: \"hello\") = first\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.list Primitive.int`,
  │ found `Primitive.string`.
   ╭─[Main.nash:2:17]
 1 │ module Main exposing (..)
 2 │ value (first :: "hello") = first
   ·                 ───┬───
   ·                    ╰── list tail pattern
   ╰────
