crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_typed_arg_mismatch.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nf : Primitive.int -> Primitive.int\nf \"hello\" = 1\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:3:3]
 1 │ module Main exposing (..)
 2 │ f : Primitive.int -> Primitive.int
   ·     ───────────────┬──────────────
   ·                    ╰── declared argument type
 3 │ f "hello" = 1
   ·   ───┬───
   ·      ╰── argument 1 of `f`
   ╰────
