crates/nash-report/src/type_/snapshots/nash_report__type___tests__pattern_without_expectation.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue [0, \"hello\"] = 1\n"
---
nash::type::pattern_mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:2:11]
 1 │ module Main exposing (..)
 2 │ value [0, "hello"] = 1
   ·           ───┬───
   ·              ╰── string pattern
   ╰────
