crates/nash-report/src/type_/snapshots/nash_report__type___tests__pipe_argument_mismatch_does_not_blame_the_function_operand.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\napply f = f ()\nvalue = apply <| ()\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.unit -> Primitive.unit`,
  │ found `Primitive.unit`.
   ╭─[Main.nash:3:18]
 2 │ apply f = f ()
 3 │ value = apply <| ()
   ·                  ─┬
   ·                   ╰── right operand of (<|)
   ╰────
