crates/nash-report/src/type_/snapshots/nash_report__type___tests__pipe_left_argument.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = (\\x -> x + 1) <| \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:2:26]
 1 │ module Main exposing (..)
 2 │ value = (\x -> x + 1) <| "hello"
   ·                          ───┬───
   ·                             ╰── right operand of (<|)
   ╰────
