crates/nash-report/src/type_/snapshots/nash_report__type___tests__pipe_left_not_function.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = \"hello\" <| 1\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int -> Primitive.int`,
  │ found `Primitive.string`.
   ╭─[Main.nash:2:9]
 1 │ module Main exposing (..)
 2 │ value = "hello" <| 1
   ·         ───┬───
   ·            ╰── left operand of (<|)
   ╰────
  help: The left operand of (<|) must be a function.
