crates/nash-report/src/type_/snapshots/nash_report__type___tests__plus_right.snap
---
source: crates/nash-report/src/type_/tests.rs
description: "module Main exposing (..)\nvalue = 1 + \"hello\"\n"
---
nash::type::mismatch

  × Type mismatch: expected `Primitive.int`, found `Primitive.string`.
   ╭─[Main.nash:2:13]
 1 │ module Main exposing (..)
 2 │ value = 1 + "hello"
   ·             ───┬───
   ·                ╰── right operand of (+)
   ╰────
